repair step width problem with last column. Hide step icon when collapsed.

--- a/app/assets/stylesheets/project.scss
+++ b/app/assets/stylesheets/project.scss
@@ -215,6 +215,10 @@ ul.steps {
     width:40px;
     text-indent:-9999em;
 }
+.collapsed .expanded-icon {
+  visibility: hidden;
+}
+
 .collapsed .ui-widget-content {
     visibility: hidden;
 }
